# dmc-k8s-ml-startup-probes

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
manifests/: dmc-k8s-ml-startup-probes.yaml
src/dmc_k8s_ml_startup_probes/app/: __init__.py  main.py
tests/: test_fastapi_app.py
